--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nutri-scale",
   "version": "0.0.1",
+  "packageManager": "pnpm@10.27.0",
   "description": "",
   "author": "",
   "private": true,
@@ -28,7 +29,6 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.6",
-    "@nestjs/typeorm": "^11.0.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@types/multer": "^2.0.0",
@@ -43,9 +43,7 @@
     "passport-jwt": "^4.0.1",
     "pdf-parse": "^2.4.5",
     "rxjs": "^7.8.1",
-    "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.28",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
