--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
+    "fuse.js": "^7.1.0",
     "groq-sdk": "^0.37.0",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
