--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fuse.js": "^7.1.0",
     "groq-sdk": "^0.37.0",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "pdf-parse": "^2.4.5",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
@@ -55,6 +56,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.9",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
