--- a/compose/local/Dockerfile
+++ b/compose/local/Dockerfile
@@ -1,17 +1,15 @@
-FROM node:20
+FROM node:20-alpine
 
 WORKDIR /app
 
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
 COPY package.json pnpm-lock.yaml ./
-
 RUN pnpm install --frozen-lockfile
 
 COPY . .
 
-RUN pnpm prisma generate
-RUN pnpm build
+RUN pnpm prisma generate && pnpm build
 
 EXPOSE 8000
 
