--- a/production.yml
+++ b/production.yml
@@ -2,27 +2,28 @@ services:
   app:
     build:
       context: .
-      dockerfile: ./compose/local/Dockerfile
+      dockerfile: ./compose/production/Dockerfile
     container_name: nutri_scale_app
     ports:
       - '8000:8000'
     env_file:
-      - .envs/.local/.nest
+      - .envs/.production/.nest
     depends_on:
       - db
+    restart: on-failure
 
   db:
     image: postgres:16-alpine
     container_name: nutri_scale_db
     env_file:
-      - .envs/.local/.postgres
+      - .envs/.production/.postgres
     ports:
       - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - postgres_backup:/backups
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres -d nutri_scale_db']
+      test: ['CMD-SHELL', 'pg_isready -U nutri_user -d nutri_scale_db']
       interval: 10s
       timeout: 5s
       retries: 5
